--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "acorn": "^7.1.1",
     "eslint-utils": "^1.4.2",
+    "kind-of": "^6.0.3",
+    "minimist": "^1.2.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0",
+    "react-scripts": "^3.4.1",
     "serialize-javascript": "^2.1.2",
     "tachyons": "^4.11.1"
   },
