--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.1",
-    "serialize-javascript": "^2.1.2",
+    "serialize-javascript": ">=3.1.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
